PUT POST DELETE
https://www.youtube.com/watch?v=GbKBcDX8DDQ&index=3&list=PL6n9fhu94yhW7yoUOGNOfHurUE6bpOO2b

--- a/ASPMVCWEbApiSample/ASPMVCWEbApiSample/bin/ASPMVCWEbApiSample.dll.config
+++ b/ASPMVCWEbApiSample/ASPMVCWEbApiSample/bin/ASPMVCWEbApiSample.dll.config
@@ -17,6 +17,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <!--<sessionstate mode="InProc"></sessionstate>--> 
   </system.web>
   <system.webServer>
     <modules>
