--- a/ASPMVCWEbApiSample/ASPMVCWEbApiSample/Web.config
+++ b/ASPMVCWEbApiSample/ASPMVCWEbApiSample/Web.config
@@ -17,7 +17,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    <sessionstate mode="c"></sessionstate> 
+    <!--<sessionstate mode="InProc"></sessionstate>--> 
   </system.web>
   <system.webServer>
     <modules>
