--- a/ASPMVCWEbApiSample/ASPMVCWEbApiSample/bin/ASPMVCWEbApiSample.dll.config
+++ b/ASPMVCWEbApiSample/ASPMVCWEbApiSample/bin/ASPMVCWEbApiSample.dll.config
@@ -13,6 +13,7 @@
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
+    <trace enabled ="true" pageOutput="false" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
